# quant-system

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW_REPORT.md  MEMORY.md  ML_MODEL_README.md  REFACTOR_PLAN.md  TRADING_DEPLOY.md  _debug_top5.py  ai_sim_trading.py  alpha_filter.py  alpha_signal_integration.py  app.py  app_api.py  app_core.py  backfill_alpha_v2.py  backtest_alpha.py  backtest_buy_conditions.py  backtest_v6_vs_v6_2.py  backtest_v6_vs_v6_5.py  check-sync.sh  check_tushare_fields.py  crontab  deploy_manual.sh  index.html  market_state.py  ml_daily_top5.py  ml_predict.py  ml_regime_detector.py  ml_train_v11_0.py  ml_train_v11_2.py  ml_train_v11_3.py  ml_train_v6_6.py  nginx-quant.conf  pyproject.toml  requirements.txt  run_backtest_v11.py  run_backtest_v11.py.bak_20260609_1526  run_backtest_v11_atr.py  (+18 more)
.claude/: scheduled_tasks.json  settings.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
archive/: admins.json  analyze_bear_alpha.py  check_bear_probs.py  check_bear_results.py  check_bear_results2.py  check_bear_thresholds.py  check_dual_model.py  check_features.py  check_label_dist.py  check_label_logic.py  check_label_multi.py  debug_prediction.py  deep_debug.py  feature_config_ridge.json  feature_config_v3.json  feature_config_v4.json  holdings_mozengfu.json  ml_predict_v3.py  ml_train.py  ml_train_v2.py  ml_train_v3.py  ml_train_v4.py  ml_train_v5.py  trades_mozengfu.json
config/: scanner_config.yaml
data/: model_registry.json  monitor_heartbeat.txt  risk_config.json
docs/: MAIN_WAVE_MODEL_DESIGN.md  (+3 more)
(+357 files in other folders)
