[project]
name = "quant-system"
version = "2.0.0"
description = "智能量化交易选股分析系统"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pandas>=2.2",
    "numpy>=1.24",
    "pymysql>=1.1",
    "sqlalchemy>=2.0",
    "cryptography>=42",
    "tushare>=1.4",
    "python-dotenv>=1.0",
    "bcrypt>=4.0",
    "DBUtils>=3.1",
    "joblib>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["quant_app*"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["data/", "logs/", "archive/", ".git/", "__pycache__/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = [
    "E501",   # 行长度已由 line-length 控制
    "E741",   # 单字母变量名（量化代码常见，如 df = ...）
]

[tool.ruff.lint.isort]
known-first-party = ["quant_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: 慢速测试（需加载模型/连接数据库）",
]
